syntax = "proto3";

option java_multiple_files = true;
option java_package = "uber.proto.objects";
option java_outer_classname = "UberObjects";

package uber.obj;

message ID {
  bytes val = 1;
}

message City {
  ID id = 1;
  string name = 2;
}

message User {
  string firstName = 1;
  string lastName = 2;
  string phoneNumber = 3;
}

message Date {
  uint32 day = 1;
  uint32 month = 2;
  int32 year = 3;
}

message Ride {
  ID id = 1;
  User provider = 2;
  City source = 3;
  City destination = 4;
  Date date = 5;
  uint32 vacancies = 6;
  float permittedDeviation = 7;
}

message RidePath {
  ID id = 1;
  User consumer = 2;
  Date date = 3;
  repeated City cities = 4;
}
